--- a/src/Resources/Themes.axaml
+++ b/src/Resources/Themes.axaml
@@ -27,9 +27,6 @@
       <Color x:Key="Color.FG1">#FF1F1F1F</Color>
       <Color x:Key="Color.FG2">#FF6F6F6F</Color>
       <Color x:Key="Color.FG3">#FFFFFFFF</Color>
-      <Color x:Key="Color.Accent1">#FF4295FF</Color>
-      <Color x:Key="Color.Accent1Hovered">#FF529DFB</Color>
-      <Color x:Key="Color.Accent2">#4C007ACC</Color>
     </ResourceDictionary>
 
     <ResourceDictionary x:Key="Dark">
@@ -58,9 +55,6 @@
       <Color x:Key="Color.FG1">#FFF1F1F1</Color>
       <Color x:Key="Color.FG2">#40F1F1F1</Color>
       <Color x:Key="Color.FG3">#FF252525</Color>
-      <Color x:Key="Color.Accent1">#FF007ACC</Color>
-      <Color x:Key="Color.Accent1Hovered">#FF006BBE</Color>
-      <Color x:Key="Color.Accent2">#8C007ACC</Color>
     </ResourceDictionary>
   </ResourceDictionary.ThemeDictionaries>
 
@@ -89,7 +83,6 @@
   <SolidColorBrush x:Key="Brush.FG1" Color="{DynamicResource Color.FG1}"/>
   <SolidColorBrush x:Key="Brush.FG2" Color="{DynamicResource Color.FG2}"/>
   <SolidColorBrush x:Key="Brush.FG3" Color="{DynamicResource Color.FG3}"/>
-  <SolidColorBrush x:Key="Brush.Accent1" Color="{DynamicResource Color.Accent1}"/>
-  <SolidColorBrush x:Key="Brush.Accent1Hovered" Color="{DynamicResource Color.Accent1Hovered}"/>
-  <SolidColorBrush x:Key="Brush.Accent2" Color="{DynamicResource Color.Accent2}"/>
+  <SolidColorBrush x:Key="Brush.Accent" Color="{DynamicResource SystemAccentColor}"/>
+  <SolidColorBrush x:Key="Brush.AccentHovered" Color="{DynamicResource SystemListLowColor}"/>
 </ResourceDictionary>
