--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -114,7 +114,7 @@
   <x:String x:Key="Text.CreateBranch.Title" xml:space="preserve">Create Local Branch</x:String>
   <x:String x:Key="Text.CreateTag" xml:space="preserve">Create Tag</x:String>
   <x:String x:Key="Text.CreateTag.BasedOn" xml:space="preserve">New Tag At :</x:String>
-  <x:String x:Key="Text.CreateTag.GPGSign" xml:space="preserve">Enable GPG signing</x:String>
+  <x:String x:Key="Text.CreateTag.GPGSign" xml:space="preserve">GPG signing</x:String>
   <x:String x:Key="Text.CreateTag.Message" xml:space="preserve">Tag Message :</x:String>
   <x:String x:Key="Text.CreateTag.Message.Placeholder" xml:space="preserve">Optional.</x:String>
   <x:String x:Key="Text.CreateTag.Name" xml:space="preserve">Tag Name :</x:String>
