--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -109,7 +109,7 @@
       </Grid.ColumnDefinitions>
 
       <!-- Left Normal Mode -->
-      <Grid Grid.Column="0" RowDefinitions="28,Auto,5,28,28,Auto,28,*,28,Auto,28,Auto" Margin="0,0,0,4" IsVisible="{Binding !IsSearching}">
+      <Grid Grid.Column="0" Classes="repository_leftpanel" RowDefinitions="28,Auto,5,28,28,Auto,28,*,28,Auto,28,Auto" Margin="0,0,0,4" IsVisible="{Binding !IsSearching}">
         <!-- WorkingCopy -->
         <TextBlock Grid.Row="0" Classes="group_header_label" Text="{DynamicResource Text.Repository.Workspace}"/>
         <ListBox Grid.Row="1" Classes="page_switcher" Background="Transparent" SelectedIndex="{Binding SelectedViewIndex, Mode=TwoWay}">
@@ -119,14 +119,14 @@
             </ItemsPanelTemplate>
           </ListBox.ItemsPanel>
 
-          <ListBoxItem Height="28" Padding="0">
+          <ListBoxItem Height="28">
             <Grid Margin="16,0,0,0" Height="28" ColumnDefinitions="20,*">
               <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Data="{StaticResource Icons.Histories}"/>
               <TextBlock Grid.Column="1" Classes="monospace" Text="{DynamicResource Text.Histories}"/>
             </Grid>
           </ListBoxItem>
 
-          <ListBoxItem Height="28" Padding="0">
+          <ListBoxItem Height="28">
             <Grid Margin="16,0,0,0" Height="28" ColumnDefinitions="20,*,Auto">
               <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Data="{StaticResource Icons.Send}"/>
               <TextBlock Grid.Column="1" Classes="monospace" Text="{DynamicResource Text.WorkingCopy}"/>
@@ -142,7 +142,7 @@
             </Grid>
           </ListBoxItem>
 
-          <ListBoxItem Height="28" Padding="0">
+          <ListBoxItem Height="28">
             <Grid Margin="16,0,0,0" Height="28" ColumnDefinitions="20,*,Auto">
               <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Data="{StaticResource Icons.Stashes}"/>
               <TextBlock Grid.Column="1" Classes="monospace" Text="{DynamicResource Text.Stashes}"/>
@@ -198,19 +198,37 @@
         <TreeView Grid.Row="5"
                   x:Name="localBranchTree"
                   MaxHeight="400"
+                  Margin="4,0,2,0"
+                  SelectionMode="Multiple"
                   ItemsSource="{Binding LocalBranchTrees}"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
-                  LostFocus="OnLocalBranchTreeLostFocus"
+                  ContextRequested="OnLocalBranchContextMenuRequested"
                   SelectionChanged="OnLocalBranchTreeSelectionChanged">
           <TreeView.Styles>
             <Style Selector="TreeViewItem" x:DataType="vm:BranchTreeNode">
               <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+              <Setter Property="CornerRadius">
+                <Setter.Value>
+                  <MultiBinding Converter="{x:Static c:BranchTreeNodeConverters.ToCornerRadius}">
+                    <Binding Path="$parent[v:Repository].RefereshLocalBranchSelectionToken"/>
+                    <Binding Path="$self"/>
+                  </MultiBinding>
+                </Setter.Value>
+              </Setter>
+            </Style>
+
+            <Style Selector="Grid.repository_leftpanel TreeViewItem:selected /template/ Border#PART_LayoutRoot">
+              <Setter Property="Background" Value="{DynamicResource Brush.AccentHovered}" />
+            </Style>
+            
+            <Style Selector="Grid.repository_leftpanel:focus-within TreeViewItem:selected /template/ Border#PART_LayoutRoot">
+              <Setter Property="Background" Value="{DynamicResource Brush.Accent}" />
             </Style>
           </TreeView.Styles>
           <TreeView.ItemTemplate>
             <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type vm:BranchTreeNode}">
-              <Grid Height="24" ColumnDefinitions="20,*,Auto,Auto" Background="Transparent" ContextRequested="OnLocalBranchContextMenuRequested" DoubleTapped="OnDoubleTappedLocalBranchNode">
+              <Grid Height="24" ColumnDefinitions="20,*,Auto,Auto" Background="Transparent" DoubleTapped="OnDoubleTappedLocalBranchNode">
                 <Path Grid.Column="0" Classes="folder_icon" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,1,0,0" IsVisible="{Binding IsFolder}"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,2,0,0" Data="{StaticResource Icons.Check}" IsVisible="{Binding IsCurrent}" VerticalAlignment="Center"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}" VerticalAlignment="Center">
@@ -250,20 +268,38 @@
         </Grid>
         <TreeView Grid.Row="7"
                   x:Name="remoteBranchTree"
+                  Margin="4,0,2,0"
+                  SelectionMode="Multiple"
                   ItemsSource="{Binding RemoteBranchTrees}"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
-                  LostFocus="OnRemoteBranchTreeLostFocus"
+                  ContextRequested="OnRemoteBranchContextMenuRequested"
                   SelectionChanged="OnRemoteBranchTreeSelectionChanged">
           <TreeView.Styles>
             <Style Selector="TreeViewItem" x:DataType="vm:BranchTreeNode">
               <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+              <Setter Property="CornerRadius">
+                <Setter.Value>
+                  <MultiBinding Converter="{x:Static c:BranchTreeNodeConverters.ToCornerRadius}">
+                    <Binding Path="$parent[v:Repository].RefereshRemoteBranchSelectionToken"/>
+                    <Binding Path="$self"/>
+                  </MultiBinding>
+                </Setter.Value>
+              </Setter>
+            </Style>
+
+            <Style Selector="Grid.repository_leftpanel TreeViewItem:selected /template/ Border#PART_LayoutRoot">
+              <Setter Property="Background" Value="{DynamicResource Brush.AccentHovered}" />
+            </Style>
+
+            <Style Selector="Grid.repository_leftpanel:focus-within TreeViewItem:selected /template/ Border#PART_LayoutRoot">
+              <Setter Property="Background" Value="{DynamicResource Brush.Accent}" />
             </Style>
           </TreeView.Styles>
 
           <TreeView.ItemTemplate>
             <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type vm:BranchTreeNode}">
-              <Grid Height="24" ColumnDefinitions="20,*,Auto" Background="Transparent" ContextRequested="OnRemoteBranchContextMenuRequested">
+              <Grid Height="24" ColumnDefinitions="20,*,Auto" Background="Transparent">
                 <Path Grid.Column="0" Classes="folder_icon" Width="10" Height="10" HorizontalAlignment="Left" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" VerticalAlignment="Center"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,2,0,0" Data="{StaticResource Icons.Remote}" IsVisible="{Binding IsRemote}" VerticalAlignment="Center"/>
                 <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}" IsVisible="{Binding IsBranch}" VerticalAlignment="Center"/>
@@ -294,7 +330,9 @@
           </Grid>
         </ToggleButton>
         <DataGrid Grid.Row="9"
+                  x:Name="tagsList"
                   MaxHeight="200"
+                  Margin="4,0,2,0"
                   Background="Transparent"
                   ItemsSource="{Binding Tags}"
                   SelectionMode="Single"
@@ -307,10 +345,27 @@
                   RowHeight="24"
                   HorizontalScrollBarVisibility="Disabled"
                   VerticalScrollBarVisibility="Auto"
-                  LostFocus="OnTagDataGridLostFocus"
                   IsVisible="{Binding IsTagGroupExpanded, Mode=OneWay}"
                   SelectionChanged="OnTagDataGridSelectionChanged"
                   ContextRequested="OnTagContextRequested">
+          <DataGrid.Styles>
+            <Style Selector="DataGridRow">
+              <Setter Property="CornerRadius" Value="4" />              
+            </Style>
+            
+            <Style Selector="DataGridRow /template/ Border#RowBorder">
+              <Setter Property="ClipToBounds" Value="True" />
+            </Style>
+            
+            <Style Selector="Grid.repository_leftpanel DataGridRow:selected /template/ Rectangle#BackgroundRectangle">
+              <Setter Property="Fill" Value="{DynamicResource Brush.AccentHovered}" />
+            </Style>
+
+            <Style Selector="Grid.repository_leftpanel:focus-within DataGridRow:selected /template/ Rectangle#BackgroundRectangle">
+              <Setter Property="Fill" Value="{DynamicResource Brush.Accent}" />
+            </Style>
+          </DataGrid.Styles>
+          
           <DataGrid.Columns>
             <DataGridTemplateColumn Header="ICON">
               <DataGridTemplateColumn.CellTemplate>
@@ -364,6 +419,7 @@
         </ToggleButton>
         <DataGrid Grid.Row="11"
                   MaxHeight="200"
+                  Margin="4,0,6,0"
                   Background="Transparent"
                   ItemsSource="{Binding Submodules}"
                   SelectionMode="Single"
@@ -378,6 +434,24 @@
                   VerticalScrollBarVisibility="Auto"
                   ContextRequested="OnSubmoduleContextRequested"
                   IsVisible="{Binding IsSubmoduleGroupExpanded, Mode=OneWay}">
+          <DataGrid.Styles>
+            <Style Selector="DataGridRow">
+              <Setter Property="CornerRadius" Value="4" />
+            </Style>
+
+            <Style Selector="DataGridRow /template/ Border#RowBorder">
+              <Setter Property="ClipToBounds" Value="True" />
+            </Style>
+
+            <Style Selector="DataGridRow:pointerover /template/ Rectangle#BackgroundRectangle">
+              <Setter Property="Fill" Value="{DynamicResource Brush.AccentHovered}" />
+            </Style>
+
+            <Style Selector="DataGridRow:selected /template/ Rectangle#BackgroundRectangle">
+              <Setter Property="Fill" Value="{DynamicResource Brush.Accent}" />
+            </Style>
+          </DataGrid.Styles>
+          
           <DataGrid.Columns>
             <DataGridTemplateColumn Header="ICON">
               <DataGridTemplateColumn.CellTemplate>
@@ -390,7 +464,7 @@
             <DataGridTemplateColumn Width="*" Header="NAME">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
-                  <TextBlock Text="{Binding}" Classes="monospace"/>
+                  <TextBlock Text="{Binding}" ClipToBounds="True" Classes="monospace"/>
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
